--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="icon" type="favicon" href="/Images/favicon.ico">
+    <link rel="icon" type="favicon" href="favicon.ico">
 
 
 </head>
 <body>
     <Div class="whatsapp_float">
-     <a href="https://wa.me/91915468382">   <img src="Images/whatsapp.jpg" width="50px" class="whatsapp_float_btn">
+     <a href="https://wa.me/91915468382">   <img src="whatsapp.jpg" width="50px" class="whatsapp_float_btn">
 </a>
     </Div>
     <header>
-        <a href="#" class="logo"><img src="Images/1.png" alt=""></a>
+        <a href="#" class="logo"><img src="1.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -93,7 +93,7 @@
        <div class="services-container">
          <div class="box">
             <div class="box-img">
-                <img src="Images/car1.jpg" alt="">
+                <img src="car1.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -102,7 +102,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car2.jpg" alt="">
+                <img src="car2.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -111,7 +111,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car3.jpg" alt="">
+                <img src="car3.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -121,7 +121,7 @@
       
          <div class="box">
             <div class="box-img">
-                <img src="Images/car4.jpg" alt="">
+                <img src="car4.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -130,7 +130,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car5.jpg" alt="">
+                <img src="car5.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -139,7 +139,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car6.jpg" alt="">
+                <img src="car6.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -148,7 +148,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car1.jpg" alt="">
+                <img src="car1.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -157,7 +157,7 @@
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="Images/car1.jpg" alt="">
+                <img src="car1.jpg" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -174,7 +174,7 @@
   </div>
     <div class="about-container">
         <div class="about-img">
-            <img src="Images/swiftmarutisuzukiswiftrightfrontthreequarter-removebg.png" alt="">
+            <img src="swiftmarutisuzukiswiftrightfrontthreequarter-removebg.png" alt="">
         </div>
      <div class="about-text">
   <span>About Us</span>
@@ -193,7 +193,7 @@
       <div class="reviews-container">
         <div class="box">
             <div class="rev-img">
-                <img src="Images/icon.jpg">
+                <img src="icon.jpg">
             </div>
            <h2>Rajesh M.</h2>
            <div class="stars">
@@ -207,7 +207,7 @@
         </div>
         <div class="box">
             <div class="rev-img">
-                <img src="Images/fimages.png">
+                <img src="fimages.png">
             </div>
            <h2>Priya K.</h2>
            <div class="stars">
@@ -221,7 +221,7 @@
         </div>
         <div class="box">
             <div class="rev-img">
-                <img src="Images/icon.jpg">
+                <img src="icon.jpg">
             </div>
            <h2>Sameer</h2>
            <div class="stars">
