--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    
  
     </div>
-       <div class="form-container">
+ <!--      <div class="form-container">
            <form action="">
             <div class="input-box">
                 <span>Location</span>
@@ -56,11 +56,11 @@
                 <span>Return Date</span>
                 <input type="date" name="" id="">
             </div>
-   <!--        <input type="submit" name="" id="" class="btn"> -->
+      <input type="submit" name="" id="" class="btn">
    <a href="tel:+91 8096795555" class="sign-in" >Book Now</a>
            </form>
 
-       </div>
+       </div> -->
 
    </section>
   <section class="ride" id="ride">
