--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
        <div class="services-container">
          <div class="box">
             <div class="box-img">
-                <img src="car1.jpg" alt="">
+                <img src="" alt="">
             </div>
             <P>2017</P>
             <h3>2018 Honda Civic</h3>
@@ -170,7 +170,7 @@
 
   <div class="heading">
     <span>About Us</span>
-    <h1>Best Cousttomer Experience</h1>
+    <h1>Best Customer Experience</h1>
   </div>
     <div class="about-container">
         <div class="about-img">
