--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
        <div class="services-container">
          <div class="box">
             <div class="box-img">
-                <img src="" alt="">
+                <img src="SWIFT VXI.png" alt="">
             </div>
             <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 | ₹2500 <span>24 hours</span> </h2>
+            <h3>SWIFT </h3>
+            <h2>₹1500  <span>12 hours</span>| ₹2200 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
