--- a/index.html
+++ b/index.html
@@ -95,73 +95,73 @@
             <div class="box-img">
                 <img src="SWIFT VXI.png" alt="">
             </div>
-            <P>2017</P>
+          <!--  <P>2017</P> -->
             <h3>SWIFT </h3>
             <h2>₹1500  <span>12 hours</span>| ₹2200 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car2.jpg" alt="">
+                <img src="baleno.png" alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
+          <!--   <P>2017</P>  -->
+            <h3>BALENO</h3>
             <h2>₹1500 <span>12 hours</span>| ₹2500 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car3.jpg" alt="">
+                <img src="i20.png" alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 <span>12 hours</span>| ₹2500 <span>24 hours</span> </h2>
+             <!--   <P>2017</P>  -->
+            <h3>i 20</h3>
+            <h2>₹1500 <span>12 hours</span>| ₹2200 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
       
          <div class="box">
             <div class="box-img">
-                <img src="car4.jpg" alt="">
+                <img src="xuv500volcanoblack.jpeg" alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 <span>12 hours</span>| ₹2500 <span>24 hours</span> </h2>
+            <!--    <P>2017</P>  -->
+            <h3>XUV 500</h3>
+            <h2>₹2200 <span>12 hours</span>| ₹3500 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car5.jpg" alt="">
+                <img src="ERTIGA.jpg" alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500<span>12 hours</span> | ₹2500 <span>24 hours</span> </h2>
+            <!--     <P>2017</P>  -->
+            <h3>ERTIGA</h3>
+            <h2>₹2000<span>12 hours</span> | ₹3300 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car6.jpg" alt="">
+             <img src="innovacrysta[20162020]garnetred.jpeg" alt=""> 
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 <span>12 hours</span>| ₹2500 <span>24 hours</span> </h2>
+       <!--     <P>2017</P> -->
+            <h3>CRYSTA</h3>
+            <h2>₹2800 <span>12 hours</span>| ₹4200 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car1.jpg" alt="">
+                <img src="fortuner[20122016]fortuner[2012]rightfrontthreequarter.jpeg " alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 | ₹2500 <span>24 hours</span> </h2>
+              <!--     <P>2017</P> -->
+                <h3>FORTUNER</h3> 
+            <h2>₹4000 | ₹6500 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
-                <img src="car1.jpg" alt="">
+                <img src="SWIFT VXI.png" alt="">
             </div>
-            <P>2017</P>
-            <h3>2018 Honda Civic</h3>
-            <h2>₹1500 | ₹2500 <span>24 hours</span> </h2>
+             <!--   <P>2017</P> -->
+            <h3>SWIFT DESIRE AUTOMATIC</h3>
+            <h2>₹1600 | ₹2300 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
         </div>
