--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </a>
     </Div>
     <header>
-        <a href="#" class="logo"><img src="1.png" alt=""></a>
+        <a href="#" class="logo"><img src="LOGO-removebg-preview.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
