--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
               <!--     <P>2017</P> -->
                 <h3>FORTUNER</h3> 
-            <h2>₹4000 | ₹6500 <span>24 hours</span> </h2>
+            <h2>₹4000  <span>12 hours</span> | ₹6500 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
          <div class="box">
@@ -161,7 +161,7 @@
             </div>
              <!--   <P>2017</P> -->
             <h3>SWIFT DESIRE AUTOMATIC</h3>
-            <h2>₹1600 | ₹2300 <span>24 hours</span> </h2>
+            <h2>₹1600  <span>12 hours</span> | ₹2300 <span>24 hours</span> </h2>
             <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
          </div>
         </div>
@@ -195,7 +195,7 @@
             <div class="rev-img">
                 <img src="icon.jpg">
             </div>
-           <h2>Rajesh M.</h2>
+           <h2>Lucky</h2>
            <div class="stars">
             <i class='bx bxs-star'></i>
             <i class='bx bxs-star'></i>
@@ -209,7 +209,7 @@
             <div class="rev-img">
                 <img src="fimages.png">
             </div>
-           <h2>Priya K.</h2>
+           <h2>Srishanth Reddy</h2>
            <div class="stars">
             <i class='bx bxs-star'></i>
             <i class='bx bxs-star'></i>
