--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="rev-img">
                 <img src="fimages.png">
             </div>
-           <h2>Srishanth Reddy</h2>
+           <h2>Bhavya</h2>
            <div class="stars">
             <i class='bx bxs-star'></i>
             <i class='bx bxs-star'></i>
@@ -223,7 +223,7 @@
             <div class="rev-img">
                 <img src="icon.jpg">
             </div>
-           <h2>Sameer</h2>
+           <h2>Srishanth Reddy</h2>
            <div class="stars">
             <i class='bx bxs-star'></i>
             <i class='bx bxs-star'></i>
