--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SureDrive Rentals</title>
+    <title>SureDrives</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -29,7 +29,7 @@
         <div class="header-btn">
             
          <!--   <a href="#" class="sign-in"></a> -->
-            <a href="tel:+91 8096795555" class="sign-in" >Book Now</a>
+            <a href="tel:+91 9154681382" class="sign-in" >Book Now</a>
         </div>
     </header>
    <section class="home" id="home">
@@ -98,7 +98,7 @@
           <!--  <P>2017</P> -->
             <h3>SWIFT </h3>
             <h2>₹1500  <span>12 hours</span>| ₹2200 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -107,7 +107,7 @@
           <!--   <P>2017</P>  -->
             <h3>BALENO</h3>
             <h2>₹1500 <span>12 hours</span>| ₹2500 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -116,7 +116,7 @@
              <!--   <P>2017</P>  -->
             <h3>i 20</h3>
             <h2>₹1500 <span>12 hours</span>| ₹2200 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
       
          <div class="box">
@@ -126,7 +126,7 @@
             <!--    <P>2017</P>  -->
             <h3>XUV 500</h3>
             <h2>₹2200 <span>12 hours</span>| ₹3500 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -135,7 +135,7 @@
             <!--     <P>2017</P>  -->
             <h3>ERTIGA</h3>
             <h2>₹2000<span>12 hours</span> | ₹3300 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -144,7 +144,7 @@
        <!--     <P>2017</P> -->
             <h3>CRYSTA</h3>
             <h2>₹2800 <span>12 hours</span>| ₹4200 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -153,7 +153,7 @@
               <!--     <P>2017</P> -->
                 <h3>FORTUNER</h3> 
             <h2>₹4000  <span>12 hours</span> | ₹6500 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
          <div class="box">
             <div class="box-img">
@@ -162,7 +162,7 @@
              <!--   <P>2017</P> -->
             <h3>SWIFT DESIRE AUTOMATIC</h3>
             <h2>₹1600  <span>12 hours</span> | ₹2300 <span>24 hours</span> </h2>
-            <a href="tel:+91 8096795555" class="btn">Rent Now</a> 
+            <a href="tel:+91 9154681382" class="btn">Rent Now</a> 
          </div>
         </div>
   </section>
@@ -195,7 +195,7 @@
             <div class="rev-img">
                 <img src="icon.jpg">
             </div>
-           <h2>Lucky</h2>
+           <h2>Swarup</h2>
            <div class="stars">
             <i class='bx bxs-star'></i>
             <i class='bx bxs-star'></i>
